--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/jbaldi13/CS546FinalProject#readme",
   "dependencies": {
     "axios": "^1.1.3",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "mongodb": "^4.11.0",
