--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "mongodb": "^4.11.0",
     "node-watch": "^0.7.3",
     "nodemon": "^2.0.20"
