--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jbaldi13/CS546FinalProject#readme",
   "dependencies": {
+    "@google-cloud/storage": "^6.8.0",
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
@@ -27,6 +28,7 @@
     "gridfs-stream": "^1.1.1",
     "method-override": "^3.0.0",
     "mongodb": "^4.11.0",
+    "multer": "^1.4.5-lts.1",
     "node-watch": "^0.7.3",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.4",
