--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "gridfs-stream": "^1.1.1",
+    "haversine-distance": "^1.2.1",
     "ipinfo": "^1.5.1",
     "method-override": "^3.0.0",
     "mongodb": "^4.11.0",
